Update release notes

--- a/fastlane/metadata/ar-SA/release_notes.txt
+++ b/fastlane/metadata/ar-SA/release_notes.txt
@@ -1,1 +1,1 @@
-• أضفنا اختصارًا لتعديل الرسائل المُرسلة من خلال النقر مرّتين على فقاعة الرسالة.
+• This update fixes a minor bug for users on iOS 16.
