--- a/fastlane/metadata/ms/release_notes.txt
+++ b/fastlane/metadata/ms/release_notes.txt
@@ -1,1 +1,1 @@
-• Kami menambah cara mudah mengedit mesej yang dihantar dengan mengetik dua kali pada gelembung mesej.
+• This update fixes a minor bug for users on iOS 16.
