--- a/fastlane/metadata/ru/release_notes.txt
+++ b/fastlane/metadata/ru/release_notes.txt
@@ -1,1 +1,1 @@
-• Мы добавили ярлык для изменения отправленных сообщений двойным нажатием на их облачко. Двойные нажатия нужны не только для лайков, если только вы не любите редактировать опечатки.
+• This update fixes a minor bug for users on iOS 16.
