--- a/fastlane/metadata/th/release_notes.txt
+++ b/fastlane/metadata/th/release_notes.txt
@@ -1,1 +1,1 @@
-• เราเพิ่มทางลัดเพื่อให้คุณแก้ไขข้อความที่ส่งแล้วได้สะดวกยิ่งขึ้นอีก แค่แตะสองครั้งที่กล่องคำพูดเท่านั้น!
+• This update fixes a minor bug for users on iOS 16.
