--- a/fastlane/metadata/uk/release_notes.txt
+++ b/fastlane/metadata/uk/release_notes.txt
@@ -1,1 +1,1 @@
-• Тепер редагувати стало простіше: треба лише двічі торкнутися надісланого повідомлення. Подвійний дотик — це не тільки вподобайка. Хіба що вам дуже подобається виправляти хибодруки.
+• This update fixes a minor bug for users on iOS 16.
