--- a/fastlane/metadata/el/release_notes.txt
+++ b/fastlane/metadata/el/release_notes.txt
@@ -1,1 +1,1 @@
-• Προσθέσαμε μια συντόμευση για την επεξεργασία των απεσταλμένων μηνυμάτων με διπλό πάτημα στα μηνύματα.
+• This update fixes a minor bug for users on iOS 16.
