--- a/fastlane/metadata/fr-FR/release_notes.txt
+++ b/fastlane/metadata/fr-FR/release_notes.txt
@@ -1,1 +1,1 @@
-• Un message envoyé à modifier ? Il n’est pas trop tard : touchez deux fois la bulle du message et le tour est joué. Qui a dit que corriger des coquilles devait être plus compliqué qu’un like ?
+• This update fixes a minor bug for users on iOS 16.
