--- a/fastlane/metadata/ro/release_notes.txt
+++ b/fastlane/metadata/ro/release_notes.txt
@@ -1,1 +1,1 @@
-• Am adăugat o comandă rapidă de editare a mesajelor trimise, prin atingerea de două ori a mesajului. Să apeși de 2 ori nu e doar pentru aprecieri.
+• This update fixes a minor bug for users on iOS 16.
