--- a/fastlane/metadata/vi/release_notes.txt
+++ b/fastlane/metadata/vi/release_notes.txt
@@ -1,1 +1,1 @@
-• Chúng tôi đã thêm một thao tác nhanh để bạn có thể sửa tin nhắn đã gửi bằng các nhấn hai lần vào bong bóng tin nhắn.
+• This update fixes a minor bug for users on iOS 16.
